--- a/style.css
+++ b/style.css
@@ -156,8 +156,9 @@ body {
       margin: 0;
       overflow-x: hidden;
     }
-    .navbar {
-        margin: 0 0 0 300px;
+    .logo-image {
+    widht:40%;
+    heigth:auto;
     }
 }
 
